bin/tests/snapshots/inherit_first__e0f1294534a1739e72bde48c327051e3_fix.snap
---
source: bin/tests/inherit_first.rs
---
let
  name = "x";
  inherit (pkgs) foo;
in
  name
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,6 @@
 let
-  name = "x";
   inherit (pkgs) foo;
+
+  name = "x";
 in
   name
