bin/tests/snapshots/inherit_first__e0f1294534a1739e72bde48c327051e3_lint_errfmt.snap
---
source: bin/tests/inherit_first.rs
---
let
  name = "x";
  inherit (pkgs) foo;
in
  name
---
<temp_file_path>>3:3:W:38:[inherit_first] `inherit` should come before the assignments above it
