bin/tests/snapshots/inherit_first__e0f1294534a1739e72bde48c327051e3_lint_json.snap
---
source: bin/tests/inherit_first.rs
---
let
  name = "x";
  inherit (pkgs) foo;
in
  name
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_first",
      "note": "`inherit` is not at the top of the set",
      "code": 38,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 22
            }
          },
          "message": "`inherit` should come before the assignments above it",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 5,
                "column": 7
              }
            },
            "fix": "let\n  inherit (pkgs) foo;\n  name = \"x\";\nin\n  name"
          }
        }
      ]
    }
  ]
}
