bin/tests/snapshots/inherit_first__e747cef34ff4eefad053f625248eebf3_fix.snap
---
source: bin/tests/inherit_first.rs
---
{
  apple = true;
  # about slugifier
  inherit slugifier;
  test = true;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,8 @@
 {
-  apple = true;
   # about slugifier
   inherit slugifier;
+
+  apple = true;
+
   test = true;
 }
