bin/tests/snapshots/inherit_first__e747cef34ff4eefad053f625248eebf3_lint_errfmt.snap
---
source: bin/tests/inherit_first.rs
---
{
  apple = true;
  # about slugifier
  inherit slugifier;
  test = true;
}
---
<temp_file_path>>5:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
<temp_file_path>>4:3:W:38:[inherit_first] `inherit` should come before the assignments above it
