bin/tests/snapshots/inherit_first__e747cef34ff4eefad053f625248eebf3_lint_json.snap
---
source: bin/tests/inherit_first.rs
---
{
  apple = true;
  # about slugifier
  inherit slugifier;
  test = true;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_blank_line",
      "note": "No blank line after `inherit`",
      "code": 36,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 5,
              "column": 3
            },
            "to": {
              "line": 5,
              "column": 15
            }
          },
          "message": "a blank line should follow the `inherit` above",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 6,
                "column": 2
              }
            },
            "fix": "{\n  apple = true;\n  # about slugifier\n  inherit slugifier;\n\n  test = true;\n}"
          }
        }
      ]
    },
    {
      "name": "inherit_first",
      "note": "`inherit` is not at the top of the set",
      "code": 38,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 21
            }
          },
          "message": "`inherit` should come before the assignments above it",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 6,
                "column": 2
              }
            },
            "fix": "{\n  # about slugifier\n  inherit slugifier;\n  apple = true;\n  test = true;\n}"
          }
        }
      ]
    }
  ]
}
