bin/tests/snapshots/inherit_first__e747cef34ff4eefad053f625248eebf3_lint_stderr.snap
---
source: bin/tests/inherit_first.rs
---
{
  apple = true;
  # about slugifier
  inherit slugifier;
  test = true;
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:5:3 ]
   │
 5 │   test = true;
   │   ──────┬─────  
   │         ╰─────── a blank line should follow the inherit above
───╯
[inherit_first] Warning: `inherit` is not at the top of the set
   ╭─[ <temp_file_path>:4:3 ]
   │
 4 │   inherit slugifier;
   │   ─────────┬────────  
   │            ╰────────── inherit should come before the assignments above it
───╯
