bin/tests/snapshots/inherit_first__eff5b1c688e82169013cf8b753bd5748_lint_errfmt.snap
---
source: bin/tests/inherit_first.rs
---
{
  apple = true;
  inherit (pkgs) zebra;
  yak = true;
  inherit lib;
}
---
<temp_file_path>>4:3:W:36:[inherit_blank_line] a blank line should follow the `inherit` above
<temp_file_path>>3:3:W:38:[inherit_first] `inherit` should come before the assignments above it
