bin/tests/snapshots/inherit_first__eff5b1c688e82169013cf8b753bd5748_lint_json.snap
---
source: bin/tests/inherit_first.rs
---
{
  apple = true;
  inherit (pkgs) zebra;
  yak = true;
  inherit lib;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "inherit_blank_line",
      "note": "No blank line after `inherit`",
      "code": 36,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 14
            }
          },
          "message": "a blank line should follow the `inherit` above",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 6,
                "column": 2
              }
            },
            "fix": "{\n  apple = true;\n  inherit (pkgs) zebra;\n\n  yak = true;\n  inherit lib;\n}"
          }
        }
      ]
    },
    {
      "name": "inherit_first",
      "note": "`inherit` is not at the top of the set",
      "code": 38,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 24
            }
          },
          "message": "`inherit` should come before the assignments above it",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 6,
                "column": 2
              }
            },
            "fix": "{\n  inherit (pkgs) zebra;\n  inherit lib;\n  apple = true;\n  yak = true;\n}"
          }
        }
      ]
    }
  ]
}
