bin/tests/snapshots/inherit_first__eff5b1c688e82169013cf8b753bd5748_lint_stderr.snap
---
source: bin/tests/inherit_first.rs
---
{
  apple = true;
  inherit (pkgs) zebra;
  yak = true;
  inherit lib;
}
---
[inherit_blank_line] Warning: No blank line after `inherit`
   ╭─[ <temp_file_path>:4:3 ]
   │
 4 │   yak = true;
   │   ─────┬─────  
   │        ╰─────── a blank line should follow the inherit above
───╯
[inherit_first] Warning: `inherit` is not at the top of the set
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   inherit (pkgs) zebra;
   │   ──────────┬──────────  
   │             ╰──────────── inherit should come before the assignments above it
───╯
